added form team code

--- a/playing_with_api.ipynb
+++ b/playing_with_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,9 @@
     "\n",
     "stat = 'total_points'\n",
     "\n",
-    "# get dictionary of player name and [corresponding id, start_of_season_cost, positon, club]\n",
     "pos = {1: 'goalkeeper', 2: 'defender', 3: 'midfielder', 4: 'forward'}\n",
     "\n",
+    "# get dictionary of player name and [corresponding id, start_of_season_cost, positon, club]\n",
     "player_id_dict = {x['web_name']: [x['id'],\n",
     "                                  x['now_cost'] - x['cost_change_start'],\n",
     "                                  pos[x['element_type']],\n",
@@ -87,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for each player create dict with name: [statistic, start_of_season_cost, postion, club]\n",
-    "# if not played then last_seasons_points is 0\n",
+    "# if not played then statistic is 0\n",
     "\n",
     "last_season_dict = {}\n",
     "\n",
@@ -110,10 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# maximise statistic subject to constraints\n",
+    "\n",
     "player = list(last_season_dict.keys())\n",
     "stat = {key: last_season_dict[key][0] for key in last_season_dict.keys()}\n",
     "cost = {key: last_season_dict[key][1] for key in last_season_dict.keys()}\n",
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +329,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,32 +339,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## in-form best 11 with unlimited price "
+    "## in-form best 11 with constrained price "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you specify num of previous gameweeks to look at and this shows best staring team over those gameweeks"
+    "# you specify num of previous gameweeks to look at, constrained price and statistic to optimise\n",
+    "# and this shows best starting team over those gameweeks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_prev_matches = 5\n",
+    "statistic = 'total_points'\n",
+    "constrained_price = 1000\n",
+    "\n",
+    "# get dict of the form player_name:[total_points_over_last_n_matches, current_cost, position, club]\n",
+    "\n",
+    "#player_id_dict has form player name: [corresponding id, start_of_season_cost, positon, club]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_form_dict = {}\n",
+    "\n",
+    "for key in player_id_dict.keys():\n",
+    "    # download player specific data\n",
+    "    with urllib.request.urlopen(\"https://fantasy.premierleague.com/api/element-summary/{}/\" \n",
+    "                                .format(player_id_dict[key][0])) as url:\n",
+    "        data_player = json.loads(url.read().decode())\n",
+    "        \n",
+    "    statistic_total = 0\n",
+    "    value = data_player['history'][-1]['value']\n",
+    "        \n",
+    "    for idx, x in enumerate(reversed(data_player['history'])):\n",
+    "        if idx < num_prev_matches:\n",
+    "            statistic_total += float(x[statistic])\n",
+    "            \n",
+    "        else:\n",
+    "            break\n",
+    "            \n",
+    "    player_form_dict[key] = [statistic_total, value, player_id_dict[key][2], player_id_dict[key][3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player = list(player_form_dict.keys())\n",
+    "stat = {key: player_form_dict[key][0] for key in player_form_dict.keys()}\n",
+    "cost = {key: player_form_dict[key][1] for key in player_form_dict.keys()}\n",
+    "gk = {key: 1 if player_form_dict[key][2] ==\n",
+    "      'goalkeeper' else 0 for key in player_form_dict.keys()}\n",
+    "defe = {key: 1 if player_form_dict[key][2] ==\n",
+    "        'defender' else 0 for key in player_form_dict.keys()}\n",
+    "mid = {key: 1 if player_form_dict[key][2] ==\n",
+    "       'midfielder' else 0 for key in player_form_dict.keys()}\n",
+    "stri = {key: 1 if player_form_dict[key][2] ==\n",
+    "        'forward' else 0 for key in player_form_dict.keys()}\n",
+    "\n",
+    "prob = LpProblem(\"Fantasy Football\", LpMaximize)\n",
+    "player_vars = LpVariable.dicts(\"Player\", player, 0, 1, LpBinary)\n",
+    "\n",
+    "# objective function\n",
+    "prob += lpSum([stat[i]*player_vars[i] for i in player]), \"Total Statistic\"\n",
+    "\n",
+    "# constraint\n",
+    "prob += lpSum([player_vars[i] for i in player]) == 11, \"Total 11 Players\"\n",
+    "prob += lpSum([cost[i] * player_vars[i]\n",
+    "               for i in player]) <= constrained_price, \"Total Cost\"\n",
+    "prob += lpSum([gk[i] * player_vars[i] for i in player]) == 1, \"Only 1 GK\"\n",
+    "prob += lpSum([defe[i] * player_vars[i] for i in player]) <= 5, \"less than 5 DEF\"\n",
+    "prob += lpSum([defe[i] * player_vars[i] for i in player]) >= 3, \"more than 3 DEF\"\n",
+    "prob += lpSum([mid[i] * player_vars[i] for i in player]) <= 5, \"less than 5 MID\"\n",
+    "prob += lpSum([mid[i] * player_vars[i] for i in player]) >= 2, \"more than 2 MID\"\n",
+    "prob += lpSum([stri[i] * player_vars[i] for i in player]) <= 3, \"less than 3 STR\"\n",
+    "prob += lpSum([stri[i] * player_vars[i] for i in player]) >= 1, \"more than 1 STR\"\n",
+    "\n",
+    "# add constraint of max 3 in a team\n",
+    "for i in range(20):  # 20 teams in the league\n",
+    "    club = {key: 1 if player_form_dict[key][3] ==\n",
+    "            i else 0 for key in player_form_dict.keys()}\n",
+    "    prob += lpSum([club[i] * player_vars[i] for i in player]\n",
+    "                  ) <= 3, \"Less than 3 in team {}\".format(i)\n",
+    "\n",
+    "# solve\n",
+    "status = prob.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "players in team are: \n",
+      "Player_Abraham = 1.0\n",
+      "Player_Agüero = 1.0\n",
+      "Player_Alexander_Arnold = 1.0\n",
+      "Player_De_Bruyne = 1.0\n",
+      "Player_Digne = 1.0\n",
+      "Player_Mané = 1.0\n",
+      "Player_Pukki = 1.0\n",
+      "Player_Salah = 1.0\n",
+      "Player_Sterling = 1.0\n",
+      "Player_Vestergaard = 1.0\n",
+      "Player_de_Gea = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('players in team are: ')\n",
+    "\n",
+    "for v in prob.variables():\n",
+    "    if v.varValue > 0:\n",
+    "        print(v.name, \"=\", v.varValue)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## in-form best 11 with constrained price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# you specify num of previous gameweeks to look at as well as max price of 11 players"
+    "## in form best 11 constrained by bench"
    ]
   },
   {
