added in form with constrained price

--- a/playing_with_api.ipynb
+++ b/playing_with_api.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,15 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total points are 2545.0 \n",
-      "\n",
       "players in team are: \n",
       "Player_Alisson = 1.0\n",
       "Player_Azpilicueta = 1.0\n",
@@ -185,7 +183,7 @@
     }
    ],
    "source": [
-    "print('total points are {} \\n'.format(value(prob.objective)))\n",
+    "#print('total points are {} \\n'.format(value(prob.objective)))\n",
     "print('players in team are: ')\n",
     "\n",
     "for v in prob.variables():\n",
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,18 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best formation is [4, 5, 1] \n",
+      "best formation is [5, 4, 1] \n",
       "\n",
-      "total points are 2079.0 \n",
+      "total points are 2032.0 \n",
       "\n",
-      "players in team are: ['Player_David_Luiz', 'Player_Ederson', 'Player_Fraser', 'Player_Jiménez', 'Player_Laporte', 'Player_Milivojevic', 'Player_Pogba', 'Player_Robertson', 'Player_Salah', 'Player_Sigurdsson', 'Player_van_Dijk']\n"
+      "players in team are: ['Player_David_Luiz', 'Player_Fraser', 'Player_Jiménez', 'Player_Laporte', 'Player_Milivojevic', 'Player_Pickford', 'Player_Robertson', 'Player_Salah', 'Player_Sigurdsson', 'Player_van_Aanholt', 'Player_van_Dijk']\n"
      ]
     }
    ],
@@ -301,8 +299,12 @@
     "    status = prob.solve()\n",
     "\n",
     "    players = [v.name for v in prob.variables() if v.varValue > 0]\n",
-    "    values.append(value(prob.objective))\n",
-    "    team_stat_dict[key] = [value(prob.objective), players]\n",
+    "    dicti = {str(key):value for key, value in zip(list(prob.objective.keys()), list(prob.objective.values()))}\n",
+    "    val = 0\n",
+    "    for play in players:\n",
+    "        val += dicti[play]\n",
+    "    values.append(val)\n",
+    "    team_stat_dict[key] = [val, players]\n",
     "\n",
     "pos_of_max = np.argmax(values)\n",
     "print('best formation is {} \\n'.format(formations[pos_of_max]))\n",
@@ -354,13 +356,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_prev_matches = 5\n",
     "statistic = 'total_points'\n",
-    "constrained_price = 1000\n",
+    "constrained_price = 970\n",
     "\n",
     "# get dict of the form player_name:[total_points_over_last_n_matches, current_cost, position, club]\n",
     "\n",
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +383,7 @@
     "                                .format(player_id_dict[key][0])) as url:\n",
     "        data_player = json.loads(url.read().decode())\n",
     "        \n",
-    "    statistic_total = 0\n",
+    "    statistic_total = 0.0\n",
     "    value = data_player['history'][-1]['value']\n",
     "        \n",
     "    for idx, x in enumerate(reversed(data_player['history'])):\n",
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -478,6 +480,70 @@
    "metadata": {},
    "source": [
     "## in form best 11 constrained by bench"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best formation is [4, 5, 1] \n",
+      "\n",
+      "total points are 348.0 \n",
+      "\n",
+      "players in team are: ['Player_Alexander_Arnold', 'Player_Cantwell', 'Player_De_Bruyne', 'Player_Digne', 'Player_Gunn', 'Player_Mané', 'Player_Mings', 'Player_Mount', 'Player_Pukki', 'Player_Salah', 'Player_Vestergaard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in formations.keys():\n",
+    "    bench_price = position_stat_dict[0] + (5 - formations[key][0])*position_stat_dict[1] + (\n",
+    "        5 - formations[key][1])*position_stat_dict[2] + (3 - formations[key][2])*position_stat_dict[3]\n",
+    "\n",
+    "    prob = LpProblem(\"Fantasy Football\", LpMaximize)\n",
+    "    player_vars = LpVariable.dicts(\"Player\", player, 0, 1, LpBinary)\n",
+    "\n",
+    "    # objective function\n",
+    "    prob += lpSum([stat[i]*player_vars[i] for i in player]), \"Total Statistic\"\n",
+    "\n",
+    "    # constraint\n",
+    "    prob += lpSum([player_vars[i] for i in player]) == 11, \"Total 11 Players\"\n",
+    "    prob += lpSum([cost[i] * player_vars[i] for i in player]\n",
+    "                  ) <= (constrained_price - bench_price), \"Total Cost\"\n",
+    "    prob += lpSum([gk[i] * player_vars[i] for i in player]) == 1, \"Only 1 GK\"\n",
+    "    prob += lpSum([defe[i] * player_vars[i]\n",
+    "                   for i in player]) == formations[key][0], \"DEF\"\n",
+    "    prob += lpSum([mid[i] * player_vars[i]\n",
+    "                   for i in player]) == formations[key][1], \"MID\"\n",
+    "    prob += lpSum([stri[i] * player_vars[i]\n",
+    "                   for i in player]) == formations[key][2], \"STR\"\n",
+    "\n",
+    "    # add constraint of max 3 in a team\n",
+    "    for i in range(20):  # 20 teams in the league\n",
+    "        club = {key: 1 if player_form_dict[key][3] ==\n",
+    "                i else 0 for key in player_form_dict.keys()}\n",
+    "        prob += lpSum([club[i] * player_vars[i] for i in player]\n",
+    "                      ) <= 3, \"Less than 3 in team {}\".format(i)\n",
+    "\n",
+    "    # solve\n",
+    "    status = prob.solve()\n",
+    "\n",
+    "    players = [v.name for v in prob.variables() if v.varValue > 0]\n",
+    "    dicti = {str(key):value for key, value in zip(list(prob.objective.keys()), list(prob.objective.values()))}\n",
+    "    val = 0\n",
+    "    for play in players:\n",
+    "        val += dicti[play]\n",
+    "    values.append(val)\n",
+    "    team_stat_dict[key] = [val, players]\n",
+    "\n",
+    "pos_of_max = np.argmax(values)\n",
+    "print('best formation is {} \\n'.format(formations[pos_of_max]))\n",
+    "print('total points are {} \\n'.format(team_stat_dict[pos_of_max][0]))\n",
+    "print('players in team are: {}'.format(team_stat_dict[pos_of_max][1]))"
    ]
   },
   {
